# ESP32C3

./: .gitignore
SourceCode/: CMakeLists.txt  README.md  extra_component.cmake  partitions.csv  sdkconfig  sdkconfig.old
SourceCode/components/app_blufi/: CMakeLists.txt  app_blufi.c
SourceCode/components/app_blufi/include/: app_blufi.h
SourceCode/components/app_console/: CMakeLists.txt  app_console.c
SourceCode/components/app_console/include/: app_console.h
SourceCode/components/app_smartconfig/: CMakeLists.txt  app_smartconfig.c
SourceCode/components/app_smartconfig/include/: app_smartconfig.h
SourceCode/components/app_sntp/: CMakeLists.txt  app_sntp.c
SourceCode/components/board_define/: CMakeLists.txt  board_define.c
SourceCode/components/https_client/: CMakeLists.txt  https_client.c
SourceCode/components/https_client/include/: https_client.h
SourceCode/components/input_device/: CMakeLists.txt  input_device.c
SourceCode/components/lcd_display/: CMakeLists.txt  lcd_display.c  user_data.c  user_gui.c
SourceCode/components/lcd_display/include/: lcd_display.h  user_data.h  user_gui.h
SourceCode/components/ledc_fade/: CMakeLists.txt  ledc_fade.c
SourceCode/components/lvgl/: .gitignore  Kconfig  lv_conf_template.h
SourceCode/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
SourceCode/components/lw_oopc/: CMakeLists.txt  lw_oopc.c
SourceCode/components/weather/: CMakeLists.txt  weather.c
SourceCode/components/weather/include/: weather.h
SourceCode/components/zlib/: CMakeLists.txt
SourceCode/main/: main.c
(+24 files in other folders)
